--- a/Outline.Rmd
+++ b/Outline.Rmd
@@ -192,13 +192,28 @@ county_turnout_estimate = select(county_expectations, state, FIPS, dem_votes, re
   select(-dem_votes,-rep_votes)
 ```
 
+#County Internal Predictions
+```{r}
+#For Results, replace votes and pct NA values with 0
+county_results[,"dem_votes.results"][is.na(county_results[,"dem_votes.results"])] = 0
+county_results[,"rep_votes.results"][is.na(county_results[,"rep_votes.results"])] = 0
+county_results[,"pct_complete"][is.na(county_results[,"pct_complete"])] = 0
+
+#Set Internal Prediction to Results, backfilling any missing results with expectations
+county_internal_predictions = left_join(county_expectations, county_results, by="FIPS") %>%
+  mutate(dem_votes.ip = dem_votes.results + dem_votes * (1 - pct_complete),
+         rep_votes.ip = rep_votes.results + rep_votes * (1 - pct_complete),
+         two_party_votes.ip = dem_votes.ip + rep_votes.ip,
+         dem_pct.ip = dem_votes.ip/two_party_votes.ip,
+         rep_pct.ip = rep_votes.ip/two_party_votes.ip
+         ) %>%
+  select(state=state.x, FIPS, dem_votes.ip, rep_votes.ip, two_party_votes.ip, dem_pct.ip, rep_pct.ip, pct_complete)
+```
+
+
 #County Adjustments
 ```{r}
 #Compute county_results stats
-county_results = county_results %>%
-  mutate(two_party_votes = dem_votes+rep_votes,
-         dem_pct = dem_votes/two_party_votes,
-         rep_pct = rep_votes/two_party_votes)
 
 county_differences = county_results %>%
   left_join(county_expectations, by= "FIPS") %>%
