--- a/Outline.Rmd
+++ b/Outline.Rmd
@@ -61,7 +61,9 @@ countypres_2000_2016 <- read.csv("countypres_2000-2016.csv",stringsAsFactors = F
 #str(countypres_2000_2016)
 
 countypres_2016 = countypres_2000_2016 %>%
-  filter(year==2016 & party %in% c("democrat","republican") & state_po=="AL") %>%
+  filter(year==2016 & party %in% c("democrat","republican") & !is.na(state_po)) %>%
+  #Remove Bedford City (merged into Bedford County 51019 in 2013)
+  filter(FIPS != 51515) %>%
   select(state_po,FIPS,party,candidatevotes) %>%
   group_by(FIPS) %>%
   mutate(two_party_votes = sum(candidatevotes)) %>%
