--- a/Outline.Rmd
+++ b/Outline.Rmd
@@ -144,28 +144,44 @@ full_join(cleaned_context_numeric[,1:2],county_expectations[,1:3], by="FIPS",kee
 ##Build Scores Table
 ```{r}
 #Build Scores - takes 1 hour (5 seconds per row x 3100 rows)
-tic()
-scores = foreach (i = 1:nrow(clean_context_numeric_transformed), .combine='rbind', .packages = "foreach") %dopar% {
-  #scores[[i]] = numeric(nrow(clean_context_numeric_transformed))
-  x = clean_context_numeric_transformed[i,-1]
-  foreach (j = 1:nrow(clean_context_numeric_transformed), .combine = 'c') %do% {
-    
-    if(i==j){
-      #scores[[i]][j] = 
-      NA
-      #print(NA)
-    } else {
-      y = clean_context_numeric_transformed[j,-1]
-      #scores[[i]][j] = 
-      round((sum((x-y)^2)),2)
-      #print(j)
-      #print(scores[[i]][j])
+
+#Check if file exists (with correct row number. if so, skip calc and load from file)
+
+scores_table_rows = nrow(clean_context_numeric_transformed)
+#scores_table_rows = 500
+scores_table_file_name = paste0("scores_table_",scores_table_rows,".rds")
+
+if(file.exists(scores_table_file_name)) {
+  print(paste("File Found:",scores_table_file_name))
+  scores = readRDS(scores_table_file_name)
+} else {
+  print(paste("Building",scores_table_file_name))
+  tic()
+  scores = foreach (i = 1:scores_table_rows, .combine='rbind', .packages = "foreach") %dopar% {
+    x = clean_context_numeric_transformed[i,-1]
+    foreach (j = 1:scores_table_rows, .combine = 'c') %do% {
+      
+      if(i==j){
+        #scores[[i]][j] = 
+        NA
+        #print(NA)
+      } else {
+        y = clean_context_numeric_transformed[j,-1]
+        #scores[[i]][j] = 
+        round((sum((x-y)^2)),2)
+        #print(j)
+        #print(scores[[i]][j])
+        
+      }
       
     }
-    
   }
+  toc()
+  saveRDS(scores, scores_table_file_name)
+  print(paste("Saved",scores_table_file_name))
 }
-toc()
+
+
 ```
 
 ###Add Alaska null data - skipping, just remove AK from results
