--- a/Outline.Rmd
+++ b/Outline.Rmd
@@ -343,18 +343,22 @@ county_differences = county_differences %>%
 scores_inv = 1/(scores+1)
 hist(scores_inv,100)
 
-hist(as.matrix(county_differences[,"dem_pct_difference_weighted"]))
+hist(as.matrix(county_differences[,"dem_pct_difference_weighted"]),main = "Hist of each county's shift.  
+     0 means no shift applied or no results yet from county")
 
 scores_inv[is.na(scores_inv)] = 0
 
 #Cumulative weight on each row
-hist(apply(scores_inv,1,sum))
+hist(apply(scores_inv,1,sum), main = "apply(scores_inv,1,sum)
+     Cumulative potential power on each county")
+str(scores_inv)
+str(county_differences)
 
 county_demo_shift = scores_inv %*% as.matrix(county_differences[,"dem_pct_difference_weighted"])
 colnames(county_demo_shift) = "demo_shift"
 
 #Distribution of shifts
-hist(county_demo_shift,25)
+hist(county_demo_shift,25, main = "Hist of resulting shifts applied to each county by External Pred.")
 
 county_differences = cbind(county_differences, as.data.frame(county_demo_shift,row.names = NA))
 
@@ -365,14 +369,15 @@ county_differences = cbind(county_differences, as.data.frame(county_demo_shift,r
 #County Turnout Predictions
 ```{r}
 
-hist(as.matrix(county_differences[,"turnout_pct_difference_weighted"]))
+hist(as.matrix(county_differences[,"turnout_pct_difference_weighted"]),main = "Hist of each county's turnout shift.  
+     0 means no shift applied or no results yet from county")
 
 
 county_demo_turnout_shift = scores_inv %*% as.matrix(county_differences[,"turnout_pct_difference_weighted"])
 colnames(county_demo_turnout_shift) = "demo_turnout_shift"
 
 #Distribution of shifts
-hist(county_demo_turnout_shift,25)
+hist(county_demo_turnout_shift,25, main = "Hist of resulting turnout shifts applied to each county by External Pred.")
 
 county_differences = cbind(county_differences, as.data.frame(county_demo_turnout_shift,row.names = NA))
 ```
